k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minha-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minha-app
  template:
    metadata:
      labels:
        app: minha-app
    spec:
      containers:
      - name: minha-app
        image: localhost:5000/minha-app:v1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: minha-app
  namespace: default
spec:
  selector:
    app: minha-app
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
