k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-lab-ingress
  namespace: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: minha-app
      port:
        number: 80
